--- a/loliccompiler.properties
+++ b/loliccompiler.properties
@@ -1,2 +1,3 @@
 path.variable.maven_repository=C\:\\Users\\Robbin Ni\\.m2\\repository
 jdk.home.1.8=C\:/Program Files/Java/jdk1.8.0_40
+javac2.instrumentation.includeJavaRuntime=false
